--- a/BoardProject/src/main/resources/application.properties
+++ b/BoardProject/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.sql.init.data-locations=classpath:db/data.sql
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+# 6. in query
+spring.jpa.properties.hibernate.default_batch_fetch_size=10
